--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "1.0.0",
   "description": "a simple page to skip bot",
   "scripts": {
-    "start": "serve"
+    "start": "serve dist",
+    "build": "babel src -d dist && cp src/{index.html,data.json} dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.3",
+    "@babel/preset-env": "^7.20.2",
     "serve": "^14.2.0"
   }
 }
